--- a/SmartStock/Views/Profile/Users.cshtml
+++ b/SmartStock/Views/Profile/Users.cshtml
@@ -1,67 +1,104 @@
 ﻿
 @model IEnumerable<SmartStock.Models.TUser>
 @{
-    ViewBag.Title = "Users";
+	ViewBag.Title = "Users";
 }
+<style>
+	th, td {
+		vertical-align: middle;
+	}
+
+	table, td, th {
+		border: 1px solid white;
+	}
+
+	table {
+		width: 1200px;
+		border-collapse: collapse;
+	}
+
+	.button-action-edit-delete {
+		padding: 4px 12px;
+		width: 100px;
+		background-color: dimgray;
+		color: white;
+	}
+
+	.button-action-edit-delete:hover {
+		background-color: gray;
+	}
+</style>
+
 <h2>@ViewBag.Title</h2>
 
-<table class="table table-striped table-condensed">
-    <tr>
-        <th>
-            @Html.DisplayName("Name")
-        </th>
-        <th>
-            @Html.DisplayName("Phone")
-        </th>
-        <th>
-            @Html.DisplayName("Email")
-        </th>
-        <th>
-            @Html.DisplayName("Username")
-        </th>
-        <th>
-            @Html.DisplayName("Password")
-        </th>
-        <th>
-            @Html.DisplayName("Notes")
-        </th>
-        <th>
-            <form action="CreateUser">
-                <input type="submit" value="+" />
-            </form>
-        </th>
-
-    </tr>
-
-    @foreach (var item in Model)
-    {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.strFirstName)
-        @Html.DisplayFor(modelItem => item.strLastName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.strPhoneNumber)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.strEmail)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.strUserName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.userPassword)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.TRole.strRoleName)
-    </td>
-    <td colspan="2" style="text-align: center;">
-        @Html.ActionLink(" ", "EditUser", new { User_ID = item.intUserID }, new { @class = "fa-solid fa-pen" })
-        &nbsp;
-        @Html.ActionLink(" ", "DeleteUser", new { User_ID = item.intUserID }, new { @class = "fa-solid fa-trash" })
-    </td>
-</tr>
-    }
+<table>
+	<colgroup>
+		<col style="width: 15%;">
+		<col style="width: 15%;">
+		<col style="width: 25%;">
+		<col style="width: 10%;">
+		<col style="width: 10%;">
+		<col style="width: 1%;">
+		<col style="width: 1%;">
+	</colgroup>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayName("Name")
+			</th>
+			<th>
+				@Html.DisplayName("Phone")
+			</th>
+			<th>
+				@Html.DisplayName("Email")
+			</th>
+			<th>
+				@Html.DisplayName("Username")
+			</th>
+			<th>
+				Role
+			</th>
+			<th>
+				Edit
+			</th>
+			<th>
+				Delete
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model) {
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.strFirstName)
+				@Html.DisplayFor(modelItem => item.strLastName)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.strPhoneNumber)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.strEmail)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.strUserName)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.TRole.strRoleName)
+			</td>
+			<td>
+				@Html.ActionLink(" ", "EditUser", new { User_ID = item.intUserID }, new { @class = "fa-solid fa-pen" })
+				@*<button class="button-action-edit-delete" onclick="location.href='@Url.Action("EditUser", "Profile", new { User_ID = item.intUserID }))';return false;"><i class="fa-solid fa-pen-to-square"></i> Edit</button>*@
+			</td>
+			<td>
+				@Html.ActionLink(" ", "DeleteUser", new { User_ID = item.intUserID }, new { @class = "fa-solid fa-trash" })
+				@*<button class="button-action-edit-delete" onclick="location.href='@Url.Action("DeleteUser", "Profile", new { User_ID = item.intUserID }))';return false;"><i class="fa-solid fa-trash"></i> Delete</button>*@
+			</td>
+		</tr>
+		}
+	</tbody>
 </table>
-
-
+<div style="text-align: right;">
+	<form action="CreateUser">
+		<input class="button-action" type="submit" value="+ Add User" />
+	</form>
+</div>
