--- a/SmartStock/Views/Profile/Inventory.cshtml
+++ b/SmartStock/Views/Profile/Inventory.cshtml
@@ -95,7 +95,10 @@
 	</tbody>
 </table>
 <div style="text-align: right;">
-	<form action="CreateItem">
-		<input class="button-action" type="submit" value="+ Add Item" />
-	</form>
+    <form action="CreateItem">
+        <input class="button-action" type="submit" value="+ Add Item" />
+    </form>
+    <form action="InventoryAdjustment">
+        <input class="button-action" type="submit" value="Inventory Adjustment" />
+    </form>
 </div>
