--- a/SmartStock/Views/Profile/Inventory.cshtml
+++ b/SmartStock/Views/Profile/Inventory.cshtml
@@ -98,4 +98,7 @@
 	<form action="CreateItem">
 		<input class="button-action" type="submit" value="+ Add Item" />
 	</form>
+	<form action="InventoryAdjustment">
+		<input class="button-action" type="submit" value="Audit" />
+	</form>
 </div>
