--- a/SmartStock/Views/Profile/PurchaseLog.cshtml
+++ b/SmartStock/Views/Profile/PurchaseLog.cshtml
@@ -3,17 +3,24 @@
     ViewBag.Title = "Purchase Log";
 }
 <style>
+	td {
+		background-color: #252524;
+	}
+
+	th {
+		background-color: #1b1a19;
+	}
+
 	th, td {
 		vertical-align: middle;
 	}
 
 	table, td, th {
-		border: 1px solid white;
-		font-size: 14px;
+		border: 1px solid #3A3A38;
 	}
 
 	table {
-		width: 1000px;
+		width: 1200px;
 		border-collapse: collapse;
 	}
 
