--- a/SmartStock/Views/Profile/Suppliers.cshtml
+++ b/SmartStock/Views/Profile/Suppliers.cshtml
@@ -110,7 +110,7 @@
 		}
 	</tbody>
 </table>
-<div style="text-align: right;">
+<div style="display: inline-flex;">
 	<form action="CreateSupplier">
 		<input type="submit" value="+ Add Supplier" />
 	</form>
