--- a/SmartStock/Views/Profile/Users.cshtml
+++ b/SmartStock/Views/Profile/Users.cshtml
@@ -103,7 +103,7 @@
 		}
 	</tbody>
 </table>
-<div style="text-align: right;">
+<div style="display: inline-flex;">
 	<form action="CreateUser">
 		<input class="button-action" type="submit" value="+ Add User" />
 	</form>
