--- a/SmartStock/Views/Profile/Audit.cshtml
+++ b/SmartStock/Views/Profile/Audit.cshtml
@@ -1,40 +1,27 @@
-﻿@model IEnumerable<SmartStock.Models.TInventory>
+﻿@model List<SmartStock.Models.TInventory>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Audit","Profile",FormMethod.Post))
 {
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.AntiForgeryToken()
-
-    <div class="center-up">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <form action="audit">
-            <table class="table table-striped table-condensed">
-                <tr>
-                    <th>
-                        @Html.DisplayName("Product Name")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Inventory Count")
-                    </th>
-                    @foreach (var item in Model)
-                    {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.strProductName)
-                        </td>
-                        <td>
-                            @Html.EditorFor(modelItem => item.intInvCount, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(modelItem => item.intInvCount, "", new { @class = "text-danger" })
-                        </td>
-                    </tr>
-                }
-                    <tr>
-                        <td colspan="2" style="text-align: center;">
-                            <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-                            <button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
-                        </td>
-                    </tr>
-                </table>
-        </form>
-    </div>
+    <table>
+            <tr>
+                <th></th>
+                <th>Product Name</th>
+                <th>Inventory Count</th>
+            </tr>
+        @for (int i = 0; i < Model.Count; i++)
+        {
+            <tr>
+                <td>@Html.HiddenFor(model => model[i].intInventoryID)</td>
+                <td>@Html.DisplayFor(model => model[i].strProductName)</td>
+                <td>@Html.EditorFor(model => model[i].intInvCount)</td>
+            </tr>
+        }
+    </table>
+<td colspan="2" style="text-align: center;">
+<button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
+<button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
+</td>
 }
