--- a/SmartStock/Views/Profile/CreateSupplier.cshtml
+++ b/SmartStock/Views/Profile/CreateSupplier.cshtml
@@ -1,112 +1,128 @@
 ﻿@model SmartStock.Models.Supplier
 @{
-    ViewBag.Title = "Create Supplier";
+	ViewBag.Title = "Add Supplier";
 }
-<h2>@ViewBag.Title</h2>
-@using (Html.BeginForm(FormMethod.Post))
-{
-    if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.RequiredFieldsMissing)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>All fields are required.</span>
-        </div>
-    }
-    if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.InvalidPhoneNumber)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>Please enter a valid phone number.</span>
-        </div>
-    }
-    if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.InvalidEmail)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>Please enter a valid email.</span>
-        </div>
-    }
-    if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.InvalidZip)
-    {
-        <div id="content-locked">
-            <i class="fa-solid fa-triangle-exclamation"></i>
-            <span>Please enter a valid zip code.</span>
-        </div>
-    }
+@using (Html.BeginForm(FormMethod.Post)) {
+	if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.RequiredFieldsMissing) {
+		<div id="content-locked">
+			<i class="fa-solid fa-triangle-exclamation"></i>
+			<span>All fields are required.</span>
+		</div>
+	}
+	if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.InvalidPhoneNumber) {
+		<div id="content-locked">
+			<i class="fa-solid fa-triangle-exclamation"></i>
+			<span>Please enter a valid phone number.</span>
+		</div>
+	}
+	if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.InvalidEmail) {
+		<div id="content-locked">
+			<i class="fa-solid fa-triangle-exclamation"></i>
+			<span>Please enter a valid email.</span>
+		</div>
+	}
+	if (Model.ActionType == SmartStock.Models.Supplier.ActionTypes.InvalidZip) {
+		<div id="content-locked">
+			<i class="fa-solid fa-triangle-exclamation"></i>
+			<span>Please enter a valid zip code.</span>
+		</div>
+	}
 
-    <div class="section">
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Company_Name)
-                @Html.TextBoxFor(Model => Model.Company_Name)
-            </div>
-        </div>
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Contact_FirstName)
-                @Html.TextBoxFor(Model => Model.Contact_FirstName)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Contact_LastName)
-                @Html.TextBoxFor(Model => Model.Contact_LastName)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Contact_Address1)
-                @Html.TextBoxFor(Model => Model.Contact_Address1)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Contact_State)
-                @Html.TextBoxFor(Model => Model.Contact_State)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Contact_Zip)
-                @Html.TextBoxFor(Model => Model.Contact_Zip)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Contact_PhoneNumber)
-                @Html.TextBoxFor(Model => Model.Contact_PhoneNumber)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Contact_Email)
-                @Html.TextBoxFor(Model => Model.Contact_Email)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.URL)
-                @Html.TextBoxFor(Model => Model.URL)
-            </div>
-        </div>
-
-        <div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.Notes)
-                @Html.TextAreaFor(Model => Model.Notes)
-            </div>
-        </div>
-    </div>
-    <div>
-        <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-        <button id="btnSignUp" name="btnSubmit" value="addsupplier" class="button-action"><i class="fas fa-user-plus"></i> Add-Supplier</button>
-    </div>
+	<div class="center-up">
+		<form action="addUser">
+			<table>
+				<tr>
+					<td colspan="2" style="text-align: center;">
+						<h1>@ViewBag.Title</h1>
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Company_Name, "Company Name:")
+					</td>
+					<td>
+						@Html.TextBoxFor(Model => Model.Company_Name, new { @autofocus = "autofocus" })
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Contact_FirstName, "Contact First Name:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Contact_FirstName)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Contact_LastName, "Contact Last Name:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Contact_LastName)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Contact_Address1, "Address:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Contact_Address1)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Contact_State, "State:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Contact_State)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Contact_Zip, "Zip:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Contact_Zip)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Contact_PhoneNumber, "Contact Phone Number:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Contact_PhoneNumber)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Contact_Email, "Contact Email:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Contact_Email)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.URL, "Business Site:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.URL)
+					</td>
+				</tr>
+				<tr>
+					<td class="table-label">
+						@Html.LabelFor(Model => Model.Notes, "Notes:")
+					</td>
+					<td colspan="2">
+						@Html.TextBoxFor(Model => Model.Notes)
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2" style="text-align: center;">
+						<button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
+						<button id="btnSignUp" name="btnSubmit" value="addsupplier" class="button-action"><i class="fas fa-user-plus"></i> Add-Supplier</button>
+					</td>
+				</tr>
+			</table>
+		</form>
+	</div>
 }
