small UI changes

--- a/SmartStock/Views/Profile/CreateItem.cshtml
+++ b/SmartStock/Views/Profile/CreateItem.cshtml
@@ -76,7 +76,7 @@
 				</tr>
 				<tr>
 					<td colspan="2" style="text-align: center;">
-						<button id="btnAddProduct" name="btnSubmit" value="addproduct" class="button-action"><i class="fas fa-user-plus"></i> Add-Item</button>
+						<button id="btnAddProduct" name="btnSubmit" value="addproduct" class="button-action"><i class="fa-solid fa-box-open"></i> Add-Item</button>
 					</td>
 				</tr>
 			</table>
