--- a/SmartStock/Views/Profile/EditItem.cshtml
+++ b/SmartStock/Views/Profile/EditItem.cshtml
@@ -63,7 +63,7 @@
                 <tr>
                     <td colspan="2" style="text-align: center;">
                         <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-                        <button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
+                        <button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fa-solid fa-box-open"></i> Submit </button>
                     </td>
                 </tr>
             </table>
