--- a/SmartStock/Views/Profile/Inventory.cshtml
+++ b/SmartStock/Views/Profile/Inventory.cshtml
@@ -104,6 +104,6 @@
 		<button class="button-action" type="submit">+ Add Item</button>
 	</form>
 	<form action="InventoryAdjustment">
-		<button class="button-action" type="submit">Inventory Adjustment</button>
+		<button class="button-action" type="submit"><i class="fa-solid fa-truck-ramp-box"></i> Inventory Adjustment</button>
 	</form>
 </div>
