--- a/SmartStock/Views/Profile/InventoryAdjustment.cshtml
+++ b/SmartStock/Views/Profile/InventoryAdjustment.cshtml
@@ -7,8 +7,8 @@
 {
     <h1>Inventory Adjustment</h1>
     <div>
-        <button id="btnAudit" name="btnSubmit" value="audit" class="button-action"><i class="fas fa-user-plus"></i> Audit</button>
-        <button id="btnDelivery" name="btnSubmit" value="delivery" class="button-action"><i class="fas fa-user-plus"></i> Delivery</button>
+        <button id="btnAudit" name="btnSubmit" value="audit" class="button-action"><i class="fa-solid fa-calculator"></i> Audit</button>
+        <button id="btnDelivery" name="btnSubmit" value="delivery" class="button-action"><i class="fa-solid fa-truck-ramp-box"></i> Delivery</button>
     </div>
 
     if (ViewBag.flag == 0)
