--- a/SmartStock/Views/Profile/Audit.cshtml
+++ b/SmartStock/Views/Profile/Audit.cshtml
@@ -1,27 +1,28 @@
 ﻿@model List<SmartStock.Models.TInventory>
 
 
-@using (Html.BeginForm("Audit","Profile",FormMethod.Post))
-{
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.AntiForgeryToken()
-    <table>
-            <tr>
-                <th></th>
-                <th>Product Name</th>
-                <th>Inventory Count</th>
-            </tr>
-        @for (int i = 0; i < Model.Count; i++)
-        {
-            <tr>
-                <td>@Html.HiddenFor(model => model[i].intInventoryID)</td>
-                <td>@Html.DisplayFor(model => model[i].strProductName)</td>
-                <td>@Html.EditorFor(model => model[i].intInvCount)</td>
-            </tr>
-        }
-    </table>
-<td colspan="2" style="text-align: center;">
-<button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-<button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
-</td>
+@using (Html.BeginForm("Audit", "Profile", FormMethod.Post)) {
+@Html.AntiForgeryToken()
+<div class="center-up">
+	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+	<table>
+		<tr>
+			<th>Product Name</th>
+			<th>Inventory Count</th>
+		</tr>
+	@for (int i = 0; i < Model.Count; i++) {
+		<tr>
+			@Html.HiddenFor(model => model[i].intInventoryID)
+			<td>@Html.DisplayFor(model => model[i].strProductName)</td>
+			<td>@Html.EditorFor(model => model[i].intInvCount)</td>
+		</tr>
+	}
+		<tr>
+			<td colspan="2" style="text-align: center;">
+				<button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
+				<button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fa-solid fa-calculator"></i> Submit </button>
+			</td>
+		</tr>
+	</table>
+</div>
 }
