--- a/SmartStock/Views/Profile/DeleteSupplier.cshtml
+++ b/SmartStock/Views/Profile/DeleteSupplier.cshtml
@@ -10,7 +10,7 @@
 
         <div class="form-actions no-color">
             <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-            <button id="btnDeleteUser" name="btnSubmit" value="deleteSubmit" class="button-action"><i class="fas fa-user-plus"></i> Delete </button>
+            <button id="btnDeleteUser" name="btnSubmit" value="deleteSubmit" class="button-action"><i class="fa-solid fa-trash"></i> Delete </button>
         </div>
     }
 </div>
