--- a/SmartStock/Content/Site.css
+++ b/SmartStock/Content/Site.css
@@ -56,6 +56,14 @@ h2 {
     padding: 10px;
 }
 
+.center-up-db {
+    position: absolute;
+    left: 50%;
+    top: 43%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
 .center-up-inv {
     position: absolute;
     left: 50%;
