--- a/SmartStock/Views/Profile/Dashboard.cshtml
+++ b/SmartStock/Views/Profile/Dashboard.cshtml
@@ -56,5 +56,5 @@
 		</div>
 	}
 	<form action="CreateCard">
-		<input type="submit" value="+" />
+		<input type="submit" value="+ New Announcement" />
 	</form>
