--- a/SmartStock/Views/Profile/CreateCard.cshtml
+++ b/SmartStock/Views/Profile/CreateCard.cshtml
@@ -1,5 +1,11 @@
 ﻿@model SmartStock.Models.Card
 @*@model IEnumerable<SmartStock.Models.TInventory>*@
+<style>
+	textarea {
+		width: 400px;
+		height: 100px;
+	}
+</style>
 @using (Html.BeginForm(FormMethod.Post))
 {
     <div class="center-up">
@@ -7,13 +13,13 @@
             <table>
                 <tr>
                     <td colspan="2" style="text-align: center;">
-                        <h1>Dashboard Alerts</h1>
+						<h1>Create a New Announcement Card</h1>
                     </td>
                 </tr>
                 <tr>
-                    <td class="table-label">
-                        @Html.TextBoxFor(model => model.Message, new { @placeholder = "Alert/Note" })
-                    </td>
+					<td style="text-align: center;">
+						@Html.TextArea("Message", "", new { @placeholder = "Alert/Note" })
+					</td>
                 </tr>
                 <tr>
                     <td colspan="2" style="text-align: center;">
