--- a/SmartStock/Views/Profile/CreateCard.cshtml
+++ b/SmartStock/Views/Profile/CreateCard.cshtml
@@ -24,7 +24,7 @@
                 <tr>
                     <td colspan="2" style="text-align: center;">
                         <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-                        <button id="btnAddCard" name="btnSubmit" value="addcard" class="button-action"><i class="fas fa-user-plus"></i> Add-Card</button>
+                        <button id="btnAddCard" name="btnSubmit" value="addcard" class="button-action"><i class="fa-solid fa-calendar-plus"></i> Add-Card</button>
                     </td>
                 </tr>
             </table>
