--- a/SmartStock/Views/Profile/Delivery.cshtml
+++ b/SmartStock/Views/Profile/Delivery.cshtml
@@ -1,83 +1,48 @@
 ﻿@model List<SmartStock.Models.TInventory>
-
-
-@using (Html.BeginForm("Delivery", "Profile", FormMethod.Post))
-{
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.AntiForgeryToken()
-    <table>
-        <tr>
-            <th></th>
-            <th>Product Name</th>
-            <th>Cost Per Unit</th>
-            <th>Purchased Amount</th>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr>
-            <td>
-                <td colspan="2">@Html.DropDownList("user", "Current User")</td>
-                <td colspan="2">@Html.DropDownList("supplier", "Select a Supplier")</td>
-            <td>
-        </tr>
-
-          
-       @for (int i = 0; i < Model.Count; i++)
-       {
-            <tr>
-                <td>@Html.HiddenFor(model => model[i].intInventoryID)</td>
-                <td>@Html.DisplayFor(model => model[i].strProductName)</td>
-                <td>@Html.TextBoxFor(model => model[i].cost)</td>
-                <td>@Html.TextBoxFor(model => model[i].amount)</td>
-                <td>@Html.DisplayFor(model => model[i].strUnitType)</td>
-                <td>@Html.HiddenFor(model => model[i].strProductName)</td>
-                <td>@Html.HiddenFor(model => model[i].strUnitType)</td>
-            </tr>
-        }
-    </table>
-    <td colspan="2" style="text-align: center;">
-        <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-        <button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
-    </td>
+@{
+	ViewBag.Title = "New Delivery";
 }
-
-
-    <div class="center-up">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <form action="delivery">
-            <table class="table table-striped table-condensed">
-                <tr>
-                    <th>
-                        @Html.DisplayName("Product Name")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Price")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Quantity Bought")
-                    </th>
-                    @foreach (var item in Model)
-                    {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.strProductName)
-                    </td>
-                    <td>
-                        @Html.TextBox("costPerUnit")
-                    </td>
-                    <td>
-                        @Html.TextBox("quantity")
-                    </td>
-                </tr>
-                }
-                    <tr>
-                        <td colspan="3" style="text-align: center;">
-                            <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
-                            <button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fa-solid fa-truck-ramp-box"></i> Submit </button>
-                        </td>
-                    </tr>
-                </table>
-            </form>
-        </div>
-    }
+@using (Html.BeginForm("Delivery", "Profile", FormMethod.Post)) {
+	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+	@Html.AntiForgeryToken()
+	<div class="center-up">
+		<h1 style="text-align: center;">@ViewBag.Title</h1>
+		<table>
+			<tr>
+				<th>Product Name</th>
+				<th>Cost Per Unit</th>
+				<th>Purchased Amount</th>
+			</tr>
+			@for (int i = 0; i < Model.Count; i++) {
+				<tr>
+					@Html.HiddenFor(model => model[i].intInventoryID)
+					<td>@Html.DisplayFor(model => model[i].strProductName)</td>
+					<td>@Html.TextBoxFor(model => model[i].cost)</td>
+					<td>@Html.TextBoxFor(model => model[i].amount)</td>
+					<td>@Html.DisplayFor(model => model[i].strUnitType)</td>
+					@Html.HiddenFor(model => model[i].strProductName)
+					@Html.HiddenFor(model => model[i].strUnitType)
+				</tr>
+			}
+			<tr>
+				<td class="table-label" colspan="2">Received By:</td>
+				<td>
+					@Html.DropDownList("user", "Select a User")
+				</td>
+			</tr>
+			<tr>
+				<td class="table-label" colspan="2">Received From:</td>
+				<td>
+					@Html.DropDownList("supplier", "Select a Supplier")
+				</td>
+			</tr>
+			<tr>
+				<td colspan="4" style="text-align: center;">
+					<button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
+					<button id="btnEditUser" name="btnSubmit" value="editSubmit" class="button-action"><i class="fas fa-user-plus"></i> Submit </button>
+				</td>
+			</tr>
+		</table>
+	</div>
+}
 
