--- a/SmartStock/Views/Profile/Dashboard.cshtml
+++ b/SmartStock/Views/Profile/Dashboard.cshtml
@@ -29,6 +29,21 @@
 		font-size: 20px;
 	}
 
+	.trash{
+		text-align: right;
+	}
+
+	.button-action-edit-delete {
+		padding: 6px 6px;
+		background-color: dimgray;
+		color: white;
+		text-align:center;
+	}
+
+	.button-action-edit-delete:hover {
+		background-color: gray;
+	}
+
 </style>
 <div class="center-up-db">
 	<h1 style="text-align: center;">@ViewBag.Title</h1>
@@ -49,12 +64,19 @@
 					</div>
 					<div class="message">
 						<div class="date">@Html.DisplayFor(modelItem => item.AlertDateTime)</div>
-						<div>@Html.DisplayFor(modelItem => item.Message)</div>
+						<div>
+							@Html.DisplayFor(modelItem => item.Message)
+							<div class="trash">
+								<button class="button-action-edit-delete" onclick="location.href='@Url.Action("DeleteCard", "Profile", new { Card_ID = item.Card_ID })';"><i class="fa-solid fa-trash"></i></button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	}
+
 	<form action="CreateCard">
-		<input type="submit" value="+ New Announcement" />
+		<input class="button-action-edit-delete" type="submit" value="+ New Announcement" />
 	</form>
+</div>
